add setup develompent client